// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CumulativeRevenueChartLegend /> should render correctly 1`] = `
<Fragment>
  <ChartLegendItem
    color="#007"
    label="Revenue"
  />
</Fragment>
`;

exports[`<CumulativeRevenueChartLegend /> should render correctly when projections are present 1`] = `
<Fragment>
  <ChartLegendItem
    color="#007"
    label="Actual Revenue"
  />
  <ChartLegendItem
    color="#007"
    dashed={true}
    label="Projected Revenue"
  />
</Fragment>
`;
